# CCA

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am  config
dependencies/: Makefile.am
m4/: scec_proj.m4
src/: Makefile.am  cca.c  cca.h
